<resources>
    <string name="app_name">Captix</string>
    <string name="title">Title</string>
    <string name="user_name">User name</string>
    <string name="image_content_description">Image of the user</string>
    <string name="category">Category</string>
    <string name="your_email_address">Your email address</string>
    <string name="choose_an_username">Choose an username</string>
    <string name="registration">Register</string>
    <string name="log_in">Log in</string>
    <string name="captix_logo">Captix logo</string>
    <string name="password">Password</string>
    <string name="description_of_the_image">Description of the image</string>
    <string name="category_of_the_image">Category of the image</string>
    <string name="title_of_the_image">Title of the image</string>
    <string name="upload">Upload</string>
    <string name="capture">Capture</string>
    <string name="image_to_upload">image to upload</string>
    <string name="facecbook">Facecbook</string>
    <string name="google">Google</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="comments">Comments:</string>
    <string name="write_comment">Write comment</string>
    <string name="send_comment">Send comment</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
</resources>
