<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewImageTitle"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            android:textAlignment="textStart"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOwner"
            android:layout_width="160dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/imageViewImage"
            app:layout_constraintEnd_toEndOf="@+id/textViewImageTitle"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/textViewImageTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewImageTitle"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageViewImage"
            android:layout_width="384dp"
            android:layout_height="260dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewImageTitle"
            app:srcCompat="@drawable/ic_photo_camera_black_48dp" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="132dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewImage" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="40dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.758"
            app:layout_constraintStart_toEndOf="@+id/textViewCategory"
            app:layout_constraintTop_toBottomOf="@+id/imageViewImage"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>